--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -22,7 +22,6 @@
                             </div>
                             <div class="col">
                                 <div class="float-right">
-                                    <!-- <button class="btn btn-lg btn-primary" type="submit">Update preview</button> -->
                                     <a class="btn btn-lg btn-primary" href="#" id="update-preview-button">Update preview</a>
                                     <button class="btn btn-lg btn-danger" type="submit">Export</button>
                                 </div>
@@ -31,140 +30,7 @@
 
                         <div class="row mt-3">
                             <table class="table table-sm table-responsive w-auto" id="data-preview">
-                                <!-- <thead class="thead-light">
-                                    <th>drug_id</th>
-                                    <th>product_name</th>
-                                    <th>labeller</th>
-                                    <th>another_col</th>
-                                    <th>another_col</th>
-                                    <th>another_col</th>
-                                    <th>another_col</th>
-                                    <th>another_col</th>
-                                    <th>another_col</th>
-                                    <th>another_col</th>
-                                </thead>
-                                <tr class="table-active">
-                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
-                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
-                                    <td class="form-inline">
-                                        <div class="row input-group">
-                                            <div class="col-3">
-                                                <select class="form-control form-control-sm">
-                                                    <option>></option>
-                                                    <option><</option>
-                                                    <option>=</option>
-                                                </select>
-                                            </div>
-                                            <div class="col-9">
-                                                <input class="form-control form-control-sm" type="text" placeholder="filter" style="max-width: 100%;">
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
-                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
-                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
-                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
-                                    <td class="form-inline">
-                                        <div class="row input-group">
-                                            <div class="col-3">
-                                                <select class="form-control form-control-sm">
-                                                    <option>></option>
-                                                    <option><</option>
-                                                    <option>=</option>
-                                                </select>
-                                            </div>
-                                            <div class="col-9">
-                                                <input class="form-control form-control-sm" type="text" placeholder="filter" style="max-width: 100%;">
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
-                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
-                                </tr>
-                                <tr>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                </tr>
-                                <tr>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                </tr>
-                                <tr>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                </tr>
-                                <tr>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                </tr>
-                                <tr>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                </tr>
-                                <tr>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                </tr>
-                                <tr>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                    <td>data</td>
-                                </tr> -->
+                                <!-- explore.js generates table os sample data -->
                             </table>
                         </div>
 
